fixed placholder on mobile

--- a/my-vue-app/src/components/css/gamesContainer.module.css
+++ b/my-vue-app/src/components/css/gamesContainer.module.css
@@ -16,10 +16,3 @@
   overflow: hidden;
   white-space: nowrap;
 }
-
-@media (max-width: 475px) {
-  .gamesContainer{
-    grid-template-columns: 1fr;
-    place-items: center;
-  }
-}
